--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,13 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "kdyby/curl": "2.2.0",
     "nette/caching": ">=2.2.0",
     "nette/utils": ">=2.2.0"
   },
   "require-dev": {
-    "nette/tester": "1.2.*",
-    "janmarek/mockista": "dev-master",
-    "jakub-onderka/php-parallel-lint": "0.*"
+    "nette/tester": "1.5.*",
+    "jakub-onderka/php-parallel-lint": "0.9",
+    "mockery/mockery": "^0.9.4"
   },
   "autoload": {
     "classmap": ["src/"]
