--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
   ],
   "require": {
     "php": ">=7.1",
-    "nette/caching": ">=3.0.0",
-    "nette/utils": ">=3.0.0"
+    "ext-curl": "*",
+    "ext-json": "*",
+    "nette/caching": "^3.0",
+    "nette/utils": "^3.0"
   },
   "require-dev": {
-    "nette/tester": "1.7.*",
-    "jakub-onderka/php-parallel-lint": "0.9",
-    "mockery/mockery": "^0.9.4"
+    "nette/tester": "^2.4",
+    "mockery/mockery": "^1.3"
   },
   "autoload": {
     "classmap": ["src/"]
